# RandomImmichFetcher

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.gitea/workflows/: docker-image.yml
