[project]
name = "immichsmartrandom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "pillow-heif>=0.22.0",
    "psutil>=7.0.0",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
]
